# APG_Study

./: CMakeLists.txt  README.md  server.conf
CombinedLog/: CMakeLists.txt  combinedlog.cpp
LogCallback/: CMakeLists.txt  callback.hpp  logcallback.cpp
Simple1/: CMakeLists.txt  simple1.cpp
Simple2/: CMakeLists.txt  simple2.cpp
Simple3/: CMakeLists.txt  simple3.cpp
Simple4/: CMakeLists.txt  simple4.cpp
Syslog/: CMakeLists.txt  syslog.cpp
include/: Trace.h  Trace.hpp
